# SASCW-ROS

./: README.md
catkin_scw/devel/: .catkin  local_setup.sh  setup.sh
catkin_scw/devel/include/fovis_ros/: FovisInfo.h
catkin_scw/devel/lib/fovis_ros/: fovis_mono_depth_odometer  fovis_stereo_odometer
catkin_scw/devel/lib/pkgconfig/: Real_Assembly.pc  fovis_ros.pc  libfovis.pc  odom_to_trajectory.pc  robot_pose_ekf.pc
catkin_scw/devel/lib/robot_pose_ekf/: robot_pose_ekf  test_robot_pose_ekf  test_robot_pose_ekf_zero_covariance
catkin_scw/devel/share/Real_Assembly/cmake/: Real_Assembly-msg-paths.cmake  Real_AssemblyConfig.cmake
catkin_scw/src/Real_Assembly/: CMakeLists.txt
catkin_scw/src/Real_Assembly/config/: controller (copy).yaml  controller.yaml  skid.yaml
catkin_scw/src/Real_Assembly/launch/: gazebo.launch
catkin_scw/src/Real_Assembly/meshes/: actuator.STL  actuator_inside.STL  actuatorbase.STL  actuatorshaft.STL  base_link.STL  frontmshaft.STL  frontshaft.STL  larmfrontwheel.STL  larmseat.STL  lconnect.STL  ldrivewheel.STL  lflipper.STL  lfliptrack.STL  lfrontwheel.STL  lmotor.STL  lslider.STL  ltrack.STL  rarmfrontwheel.STL  rarmrearwheel.STL  rarmseat.STL  rarmtrack.STL  rconnect.STL  rdrivewheel.STL  rflipper.STL  rfrontwheel.STL  rmotor.STL  rslider.STL  rtrack.STL  seat.STL  seat_base.STL  seat_shaft.STL  seatshaftfront.STL  slider_shaft.STL  stair_link.STL
catkin_scw/src/Real_Assembly/scripts/: hello_world_subscriber_depth.py
catkin_scw/src/Real_Assembly/urdf/: Real_Assembly.urdf
catkin_scw/src/Real_Assembly/world/: track.world
(+15 files in other folders)
